--- a/index.html
+++ b/index.html
@@ -2,23 +2,22 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Thumbspanel</title>
     <style>
+    .linksBox{
+border-style: dashed;
+  border-color: black;
+}
     body {
-      background-image: url("https://liveycstech-my.sharepoint.com/personal/riley23062_live_ytech_edu/Documents/2b14952ffd6ce75b58ca3d8776609a8d.gif");
-      background-size:cover;
-      background-origin: padding-box;
-       background-repeat: no-repeat;
+
        background-color: #fc1663
-
     }
-
     body {
       background-position:top;
        font-family: Arial, sans-serif;
     }
     a:link, a:visited {
-
       background-color: #9d1241;
       color: white;
       padding: 15px 25px;
@@ -26,32 +25,49 @@
       text-decoration: none;
       display: inline-block;
     }
-
     a:hover, a:active {
       background-color: #ff036a;
     }
 
-    p {position:relative; left:1500px; top:90px;}
-    div {text-align: right;}
-
+    p {text-align: center;}
     h1 {
       text-align: center;
       font-size: 60px;
-      position:relative; bottom:50px;
-      background-color:#fc1663;
+      position:relative; bottom:20px;
+
     }
-
-
+    img {
+      display: block;
+      margin-left: auto;
+      margin-right: auto;
+      width: 50%;
+    }
     </style>
   </head>
 
   <body>
+<div class="content">
+<!--Header-->
 
-    <h1> <span style= "color:Black"> Thumbspanel </marquee> </h1>
-<p id="link" style="font-size: 35px;"><a href="http://172.21.3.4:5000/tutd?thumb=up">Up</a> </p>
-<p id="link" style="font-size: 35px;"><a href="http://172.21.3.4:5000/tutd?thumb=wiggle">Wiggle</a> </p>
-<p id="link" style="font-size: 35px;"><a href="http://172.21.3.4:5000/tutd?thumb=down">Down</a> </p>
-<p id="link" style="font-size: 35px;"><a href="http://172.21.3.4:5000/tutd?thumb=oops">Remove</a> </p>
-<p id="link" style="font-size: 35px;"><a href="http://172.21.3.4:5000/help">Help</a> </p>
+    <h1> <span style= "color:#424242"> Thumbspanel </marquee> </h1>
+<div class="">
+  <img src="https://liveycstech-my.sharepoint.com/personal/riley23062_live_ytech_edu/Documents/Other%20files/d4aa1b988d287dbd0ac912ea6500e4400ed045c4_00.gif" style=border:none;width:500px;height:350px;
+</div>
+<div class="">
+
+  <p id="link" style="font-size: 35px;"><a href="http://172.21.3.4:5000/tutd?thumb=up">Up</a> </p>
+  <p id="link" style="font-size: 35px;"><a href="http://172.21.3.4:5000/tutd?thumb=wiggle">Wiggle</a> </p>
+  <p id="link" style="font-size: 35px;"><a href="http://172.21.3.4:5000/tutd?thumb=down">Down</a> </p>
+  <p id="link" style="font-size: 35px;"><a href="http://172.21.3.4:5000/tutd?thumb=oops">Remove</a> </p>
+  <p id="link" style="font-size: 35px;"><a href="http://172.21.3.4:5000/help">Help</a> </p>
+</div>
+
+  <img src="https://liveycstech-my.sharepoint.com/personal/riley23062_live_ytech_edu/Documents/Other%20files/tumblr_ou44ky7EPx1uuhxwpo1_400.gif" style=border:none;width:500px;height:350px;
+
+
+
+
+
+</div>
   </body>
 </html>
