--- a/index.html
+++ b/index.html
@@ -1,78 +1,38 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Thumbspanel</title>
-    <style>
 
-    .linksBox{
-border-style: dashed;
-  border-color: black;
-}
-    body {
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Thumbspanel</title>
+  <link rel="stylesheet" href="css/styleThumbs.css">
+  <link rel="stylesheet" href="stylesheet.css" type="text/css" charset="utf-8" />
+</head>
 
-       background-color: #fc1663;
-    }
+<body>
 
-    a:link, a:visited {
-      background-color: #9d1241;
-      color: white;
-      padding: 15px 25px;
-      text-align: center;
-      text-decoration: none;
-      display: inline-block;
-    }
-    a:hover, a:active {
-      background-color: #ff036a;
-    }
+  <div class="content">
+    <div class="button_center">
+      <div class="header">
+        <img style="width: 45%;" src="img/thumbspanelHeader.png" alt="Title Header">
+      </div>
+      <div class="pics">
+        <img style="transform: scaleX(-1);" src="img/cloudKingdomHearts.gif" alt="Cloud From Final Fantasy">
+        <img style="width: 19%;" src="img/linkTP.gif" alt="Link from LOZ:Twilight Princess">
+      </div>
+      <div class="buttons">
+        <p id="link" style="font-size: 45px;"><a href="http://172.21.3.4:5000/tutd?thumb=up">Up </a> </p>
+        <p id="link" style="font-size: 45px;"><a href="http://172.21.3.4:5000/tutd?thumb=wiggle">Wiggle</a> </p>
+        <p id="link" style="font-size: 45px;"><a href="http://172.21.3.4:5000/tutd?thumb=down">Down</a> </p>
+        <p id="link" style="font-size: 45px;"><a href="http://172.21.3.4:5000/tutd?thumb=oops">Remove</a> </p>
+      </div>
+      <div class="buttons">
+        <p id="link" style="font-size: 45px;"><a href="http://172.21.3.4:5000/help">Help</a> </p>
+        <p id="link" style="font-size: 45px;"><a href="https://www.youtube.com/">Youtube</a>
+        <p id="link" style="font-size: 45px;"><a href="game.html">Game</a>
+      </div>
+    </div>
+  </div>
+</body>
 
-    p {text-align: center;}
-    h1 {
-      text-align: center;
-      font-size: 60px;
-      position:relative; bottom:20px;
-
-    }
-    img {
-      display: block;
-      margin-left: auto;
-      margin-right: auto;
-      width: 50%;
-    }
-    @media only screen and (max-width: 600px){
-    body {
-      background-color: #9d1241;
-    }
-  }
-
-    </style>
-  </head>
-
-  <body>
-<div class="content">
-<!--Header-->
-
-    <h1> <span style= "color:#424242"> Thumbspanel </marquee> </h1>
-<div class="topPic">
-  <img src="https://liveycstech-my.sharepoint.com/personal/riley23062_live_ytech_edu/Documents/Other%20files/d4aa1b988d287dbd0ac912ea6500e4400ed045c4_00.gif" style=border:none;width:500px;height:350px;
-</div>
-<div class="buttons">
-  <p><a href="game.html">Game</a>
-  <p id="link" style="font-size: 35px;"><a href="http://172.21.3.4:5000/tutd?thumb=up">Up</a> </p>
-  <p id="link" style="font-size: 35px;"><a href="http://172.21.3.4:5000/tutd?thumb=wiggle">Wiggle</a> </p>
-  <p id="link" style="font-size: 35px;"><a href="http://172.21.3.4:5000/tutd?thumb=down">Down</a> </p>
-  <p id="link" style="font-size: 35px;"><a href="http://172.21.3.4:5000/tutd?thumb=oops">Remove</a> </p>
-  <p id="link" style="font-size: 35px;"><a href="http://172.21.3.4:5000/help">Help</a> </p>
-</div>
-<div class="bottomPic">
-  <img src="https://liveycstech-my.sharepoint.com/personal/riley23062_live_ytech_edu/Documents/Other%20files/tumblr_ou44ky7EPx1uuhxwpo1_400.gif" style=border:none;width:500px;height:350px;
-</div>
-
-
-
-
-
-</div>
-  </body>
 </html>
